force-app/main/default/objects/CountryRegionMapping__mdt/CountryRegionMapping__mdt.object-meta.xml
<CustomObject>
    <description>MetaData for setting country and Region codes on Leads and Contacts</description>
    <label>CountryRegionMapping</label>
    <pluralLabel>CountryRegionMappings</pluralLabel>
</CustomObject>