force-app/main/default/objects/CountryRegionMapping__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <description>Country code value in SFDC</description>
    <label>CountryCode</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>