force-app/main/default/objects/CountryRegionMapping__mdt/fields/Marketability_Rule__c.field-meta.xml
<CustomField>
    <fullName>Marketability_Rule__c</fullName>
	<description>This field determines which marketability rule is valid for the country specified in the record.</description>
    <label>Marketability Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Implicit Opt-in</fullName>
            </value>
            <value>
                <fullName>Explicit Opt-in</fullName>
            </value>
            <value>
                <fullName>Double Opt-in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>