force-app/main/default/objects/CountryRegionMapping__mdt/fields/Opt_in_Rule__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_Rule__c</fullName>
    <description>CMCM-1177- This field depicts the Opt-in Rule (replacing Marketability Rule) for a Lead/Contact as of Privacy updates to Marketability in Jan 2024.</description>
    <label>Opt-in Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Opt Out Country Single</fullName>
            </value>
            <value>
                <fullName>Opt Out Country Double</fullName>
            </value>
            <value>
                <fullName>Opt In Country Single</fullName>
            </value>
            <value>
                <fullName>Opt In Country Double</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>